k8s-security-framework/policies/resource-governance/KSP-RES-002/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-res-002-exception
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-res-002-exception-secondary
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-res-002-exception-tertiary
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    resources:
      requests:
        memory: 128Mi
  initContainers:
  - name: init
    image: harbor.example.com/demo-api:1.0.0
